# corp-opportunity-manager

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/rules/: python-env.md  testing.md
config/: default.yaml
docs/archive/: 2026-03-15_CODE_REVIEW_REPORT.md
src/corp_opportunity_manager/: __init__.py  chat.py  cli.py  config.py  excel_manager.py  folder_manager.py  folder_standards.py  llm_client.py  models.py  templates.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_api_keys.py  test_chat.py  test_excel_manager.py  test_folder_manager.py  test_folder_standards.py  test_llm_client.py  test_templates.py
